--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header>
     <main class="max-w-[1074px] max-h-[1000px] mx-auto mt-[240px]">
       <div class="grid grid-cols-12 gap-8">
-        <div class="item-container col-span-9">
+        <div id="item-containers" class="item-container col-span-9">
         <div>
           <h1 class="text-[2.5rem] font-semibold">Kitchenware</h1>
           <div class="md:flex gap-4">
